unpackaged/main/default/objects/Task_creation_for_Self_Serve__e/Task_creation_for_Self_Serve__e.object-meta.xml
<CustomObject>
    <label>Task creation for Self Serve</label>
    <pluralLabel>Task creation for Self Serves</pluralLabel>
</CustomObject>