unpackaged/main/default/objects/Task_creation_for_Self_Serve__e/fields/AgentID__c.field-meta.xml
<CustomField>
    <fullName>AgentID__c</fullName>
    <label>AgentID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>