unpackaged/main/default/objects/Task_creation_for_Self_Serve__e/fields/preferred_slot_From_date__c.field-meta.xml
<CustomField>
    <fullName>preferred_slot_From_date__c</fullName>
    <label>preferred slot From date</label>
    <type>DateTime</type>
</CustomField>